# fx_bin

./: .gitignore  .gitmessage  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.md  README.rst  SKILL.md  index.html  mkdocs.yml  pyproject.toml  pytest-bdd.ini  requirements-bdd.txt  setup.cfg  setup.py  sitemap.xml  task_plan.md  tox.ini
.github/workflows/: cd-release.yml  ci-quality.yml  ci-security.yml  ci-test.yml  codeql.yml  deploy-docs.yml  main.yml  semantic-release.yml  tdd-test.yml
CI_CD/: index.html
COMPLETION_SUMMARY/: index.html
DEPLOYMENT_SUMMARY/: index.html
MIGRATION_GUIDE_v1.1.0/: index.html
advanced/performance/: index.html
advanced/shell-integration/: index.html
bdd-testing-guide/: index.html
benchmarks/: README.md  __init__.py  benchmark_suite.py
changelog/: index.html
changelog/20250823_011019_refactor_test-structure-reorganization/: index.html
changelog/20250823_015652_bug-fix_failing-tests-comprehensive-fix/: index.html
changelog/20250823_094202_bug-fix_benchmark-code-review-issues/: index.html
changelog/20250823_102722_feature_test-coverage-improvement-plan/: index.html
changelog/20250823_234354_refactor_code-quality-improvements/: index.html
changelog/20250825_164500_v1-1-0-breaking-changes-documentation/: index.html
changelog/20250830_v1.2.0_filter-command-release/: index.html
changelog/20250905_fx_ff_exclusions_and_options/: index.html
changelog/20250905_test_reorganization_and_cleanup/: index.html
changelog/code_quality_review_by_codex_on_20250823/: index.html
changelog/v1.3.7/: index.html
commands/backup/: index.html
commands/ff/: index.html
commands/fff/: index.html
commands/files/: index.html
commands/filter/: index.html
commands/open/: index.html
commands/organize/: index.html
commands/replace/: index.html
commands/root/: index.html
commands/size/: index.html
commands/today/: index.html
commit-message-guide/: index.html
contributing/: index.html
decision-log/: index.html
docs/: CI_CD.md  MIGRATION_GUIDE_v1.1.0.md  Makefile  bdd-testing-guide.md  commit-message-guide.md  conf.py  decision-log.md  fx-root-setup.md  fx-today-setup.md  index.html  index.rst  installation.rst  make.bat  project-status.md  quick-start.md  session-index.md  usage.rst
docs/changelog/: 20250823_011019_refactor_test-structure-reorganization.md  20250823_015652_bug-fix_failing-tests-comprehensive-fix.md  20250823_094202_bug-fix_benchmark-code-review-issues.md  20250823_102722_feature_test-coverage-improvement-plan.md  20250823_234354_refactor_code-quality-improvements.md  20250825_164500_v1-1-0-breaking-changes-documentation.md  20250830_v1.2.0_filter-command-release.md  20250905_fx_ff_exclusions_and_options.md  20250905_test_reorganization_and_cleanup.md  code_quality_review_by_codex_on_20250823.md  v1.3.7.md
docs/plans/: 2026-01-01-cleanup-and-hardening.md  2026-01-01-ff-first-and-fff-design.md  2026-01-01-python-semantic-release-automation.md  2026-01-02-fx-realpath-design.md  2026-01-03-add-backup-command.md  2026-01-05-timestamp-utility-refactoring.md  README.md  completed-2026-01-01-cleanup-and-hardening.md  completed-2026-01-01-ff-first-and-fff-design.md  completed-2026-01-01-python-semantic-release-automation.md  completed-2026-01-02-fx-realpath-design.md  completed-2026-01-03-add-backup-command.md
docs/refactors/: functional-python-plan-20250823-0202.md
docs/sessions/: 20250830_104500_v1-3-0-bdd-infrastructure-release.md  20250830_111653_v1-3-1-security-fix-release.md  20250830_132203_bdd-test-isolation-fix.md  20250830_143808_file-size-alignment-fix.md  20250830_v1.2.0_filter-command-release.md  20250905_175802_test_reorganization_and_fixes.md  20250906_041900_git-root-command-implementation.md  20250906_061617_test-infrastructure-fix-and-cli-enhancements.md  20250906_070922_github-actions-test-fix-and-makefile-enhancement.md  20250906_114534_fx-root-cross-platform-implementation.md  20250906_150903_fx-today-command-implementation.md  20250906_234008_code-quality-improvements-and-security-fixes.md
features/: file_filter.feature  filter_improvements_v1_3_1.feature  organize.feature  today_workspace.feature
fx-root-setup/: index.html
fx-today-setup/: index.html
fx_bin/: __init__.py  backup.py  backup_utils.py  cli.py  common.py  common_functional.py  errors.py  files.py  filter.py  find_files.py  lib.py  open_launcher.py  organize.py  organize_functional.py  pd.py  pd_functional.py  py_fx_bin.py  realpath.py  replace.py  replace_functional.py  root.py  run_upgrade_program.py  shared_types.py  size.py  today.py  upload_server.py
openspec/: project.md
plans/: index.html
project-status/: index.html
py_fx_bin/: cli.py  size.py
quick-start/: index.html
rules/: FXB-0000-REF-Document-Index.md  FXB-2100-CHG-Add-FX-Open-Launcher-Command.md  FXB-2101-CHG-Render-FX-Open-List-As-Responsive-ASCII-Table.md  FXB-2102-CHG-Clarify-FX-Open-Browser-Selection-Defaults.md  FXB-2103-CHG-Add-FX-Open-Delete-Command.md  FXB-2104-CHG-Add-FX-Open-Disable-Command.md  FXB-2105-CHG-Add-FX-Open-Search-Command.md  FXB-2106-CHG-Move-FX-Open-Slug-Column-After-Index.md  FXB-2107-PLN-Implement-FX-Open-Slug-Column-Order.md  FXB-2108-CHG-Add-macOS-Directory-Support-to-FX-Open.md  FXB-2109-SOP-Code-Review-AI-Assisted-Quick-Reference.md
scripts/: check_complexity.py  check_nesting.py  fx-root-wrapper.sh  setup-fx-root.sh  setup-fx-today.sh  test-fxroot.sh
search/: search_index.json
session-index/: index.html
site/: index.html
tests/: __init__.py  conftest.py  helpers.py  test_cli.py  test_common_functional_extended.py  test_common_safety.py  test_files.py  test_filter.py  test_filter_improvements_v1_3_1.py  test_find_files.py  test_fixtures_demo.py  test_functional.py  test_integration.py  test_lib.py  test_pd_functional_complete.py  test_pd_safety.py  test_performance.py  test_property_based.py  test_py_fx_bin.py  test_replace.py  test_replace_safety.py  test_run_upgrade_program.py  test_size.py  test_upload_server_security.py
(+180 files in other folders)
