[tool.poetry]
name = "fx-bin"
version = "0.7.1"
description = "A common bin collection for my own usage"
authors = ["Frank Xu <frank@frankxu.me>"]
readme = "README.rst"
repository = "https://github.com/frankyxhl/fx_bin"
keywords = ["fx_bin"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
loguru = "^0.7.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
fx_upgrade = "fx_bin.run_upgrade_program:main"
fx_files = "fx_bin.files:main"
fx_size = "fx_bin.size:main"
fx_ff = "fx_bin.find_files:main"
fx_replace = "fx_bin.replace:main"
fx_grab_json_api_to_excel = "fx_bin.pd:main"
fx_server = "fx_bin.upload_server:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
