[tool.poetry]
name = "fx-bin"
version = "2.2.1"
description = "A common bin collection for my own usage"
authors = ["Frank Xu <frank@frankxu.me>"]
readme = "README.md"
repository = "https://github.com/frankyxhl/fx_bin"
keywords = ["fx_bin"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
loguru = "^0.7.0"
returns = "^0.22.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-bdd = "^7.0.0"
pytest-cov = "^4.1.0"
pytest-timeout = "^2.2.0"
pytest-mock = "^3.12.0"
pytest-xdist = "^3.5.0"
flake8 = "^7.0.0"
black = "^24.3.0"
mypy = "^1.8.0"
bandit = "^1.7.5"
safety = "^3.0.0"
psutil = "^5.9.0"
pytest-forked = "^1.6.0"

[tool.poetry.scripts]
# Unified CLI command
fx = "fx_bin.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=fx_bin",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
    "--timeout=30",
    "--strict-markers",
]
filterwarnings = [
    "ignore:usefixtures\\(\\).*without arguments has no effect:pytest.PytestWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "security: marks tests as security-related",
    "integration: marks tests as integration tests",
    "performance: marks tests as performance tests",
    "filter_command: Tests for the filter command",
    "smoke: Smoke tests",
    "critical: Critical tests",
    "file_management: File management tests",
    "case_sensitivity: Case sensitivity tests",
    "edge_cases: Edge case tests",
    "error_handling: Error handling tests",
    "glob_patterns: Glob pattern tests",
    "help_and_usage: Help and usage tests",
    "multiple_directories: Multiple directory tests",
    "output_format: Output format tests",
    "pagination: Pagination tests",
    "recursion: Recursion tests",
    "sorting: Sorting tests",
    "version_compatibility: Version compatibility tests",
    "bdd: BDD tests",
]
timeout = 300
bdd_features_base_dir = "features"

[tool.coverage.run]
source = ["fx_bin"]
omit = [
    "*/tests/*",
    "*/test_*",
    "fx_bin/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstract",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | build
    | dist
  )/
)
'''

[tool.mypy]
python_version = "3.11"
# Plugin disabled due to mypy internal error with returns library HKT types
# plugins = ["returns.contrib.mypy.returns_plugin"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "psutil.*",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # Skip assert_used test

[tool.bandit.assert_used]
skips = ["**/test_*.py", "**/tests/*"]

[tool.semantic_release]
tag_format = "v{version}"
version_toml = ["pyproject.toml:tool.poetry.version"]
version_variables = [
    "fx_bin/__init__.py:__version__",
]
branch = "main"
upload_to_pypi = false  # We handle PyPI upload manually in workflow
build_command = ""  # We handle building manually in workflow to avoid permission conflicts
commit_parser = "conventional"

# GitHub Release Settings
# Semantic-release creates GitHub Release with auto-generated changelog
upload_to_repository = true  # Creates GitHub Release
repository_user = "frankyxhl"
repository_name = "fx_bin"
remove_dist = false  # Keep dist files for manual upload to release

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
